# quadratic_backprop

./: CMakeLists.txt  main.cpp
